MET-6928 Add support for cors configuration